# lapisco-training

./: CMakeLists.txt  README.md
results/: 10_image.txt  46_statistic_moments.txt  47_central_moments.txt  48_hu_moments.txt  49_LBP.txt  50_glcm.txt  9_image.txt
src/: Topico_1.cpp  Topico_10.cpp  Topico_11.cpp  Topico_12.cpp  Topico_13.cpp  Topico_14.cpp  Topico_15.cpp  Topico_16.cpp  Topico_17.cpp  Topico_18.cpp  Topico_19.cpp  Topico_2.cpp  Topico_20.cpp  Topico_21.cpp  Topico_22.cpp  Topico_23.cpp  Topico_24.cpp  Topico_25.cpp  Topico_26.cpp  Topico_27.cpp  Topico_28.cpp  Topico_29.cpp  Topico_3.cpp  Topico_30.cpp  Topico_31.cpp  Topico_32.cpp  Topico_33.cpp  Topico_34.cpp  Topico_35.cpp  Topico_36.cpp  Topico_37.cpp  Topico_38.cpp  Topico_39.cpp  Topico_4.cpp  Topico_40.cpp  Topico_41.cpp  Topico_42.cpp  Topico_43.cpp  Topico_44.cpp  Topico_45.cpp  (+12 more)
